# tmux-session-manager

./: CLAUDE.md  Cargo.toml  README.md  demo.cast  demo.tape  install.sh  record-demo.sh  tmux-session-manager.sh  ts_preview.sh
.serena/: project.yml
src/: completion.rs  detection.rs  input.rs  main.rs  scroll_state.rs  session.rs  tmux.rs
src/app/: helpers.rs  mod.rs  mode.rs
src/ui/: dialogs.rs  help.rs  mod.rs
