[package]
name = "tmux-session-manager"
version = "0.1.0"
edition = "2021"
description = "TUI for managing tmux sessions with Claude Code status"

[[bin]]
name = "tsm"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
dirs = "5.0"
unicode-width = "0.2"
ansi-to-tui = "7.0"
